# gradio-sync3dcompare

./: README.md  demo_sync.py  pyproject.toml  release_notes.md
.github/workflows/: python-publish.yml
backend/gradio_sync3dcompare/: __init__.py  sync3dcompare.py
demo/: app.py  space.py
demo/sample_data/: ground_truth.ply  mesh_a.glb  mesh_b.glb  method_a.ply  method_b.ply
frontend/: Index.svelte  package-lock.json  package.json  types.ts
frontend/shared/: Sync3DCompare.svelte  Viewport.svelte  assetLoader.ts  boundingBox.ts  cameraSyncManager.ts  meshToPoints.ts  pointSizing.ts
scripts/: patch_gradio_preview_examine.py
tests/: test_backend.py
