[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_sync3dcompare"
version = "0.0.1"
description = "Synchronized side-by-side 3D comparison viewer for Gradio — supports PLY and GLB files with shared camera control."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "shriarul5273", email = "shriarulmozhivarman643@gmail.com" }]
keywords = [
  "gradio-custom-component",
  "gradio",
  "3d",
  "point-cloud",
  "ply",
  "glb",
  "visualization",
  "comparison",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["gradio>=6.0,<7.0"]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
repository = "https://github.com/shriarul5273/gradio-sync3dcompare"

[tool.hatch.build]
artifacts = ["/backend/gradio_sync3dcompare/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_sync3dcompare"]
